# android_kernel_device_modules-6.6

./: BUILD.bazel  build.sh
drivers/char/rpmb/: rpmb-mtk.c
drivers/gpu/drm/mediatek/mediatek_v2/: mtk_disp_dsc.c
drivers/gpu/drm/mediatek/mediatek_v2/mtk_disp_oddmr/: mtk_disp_oddmr.c
drivers/gpu/mediatek/ged/include/: ged_dvfs.h
drivers/gpu/mediatek/ged/src/: ged_base.c
drivers/gpu/mediatek/gpufreq/v2_legacy/include/: gpufreq_common_legacy.h
drivers/input/SAR/hx9023_sar/: Kconfig
drivers/input/touchscreen/GT1151/: gt1x_tpd.c
drivers/input/touchscreen/GT9966/: Kconfig  goodix_ts_inspect.c
drivers/input/touchscreen/GTP1151/: gt1x_tpd.c
drivers/input/touchscreen/ILITEK/: ilitek_main.c
drivers/input/touchscreen/NT36528/: nt36xxx_sec_fn.c
drivers/input/touchscreen/TD4160/: omnivision_tcm_core.h
drivers/input/touchscreen/hx83112f/: Kconfig
drivers/input/touchscreen/synaptics_dsx_96851/: Kconfig
drivers/input/touchscreen/synaptics_tcm2_sec/: syna_tcm2_runtime.h
drivers/media/platform/mtk-vcodec/: mtk_vcodec_util.h
drivers/misc/mediatek/blocktag/: blocktag-earaio.c
drivers/misc/mediatek/cpufreq_v2/inc/: mtk_cpufreq_internal.h
drivers/misc/mediatek/mdpm_v1/: mtk_mdpm_common_v1.c  mtk_mdpm_common_v2.c  mtk_mdpm_platform_6765.c  mtk_mdpm_platform_mt6768.c
drivers/misc/mediatek/mme/: mmevent.h
drivers/misc/mediatek/performance/include/: mtk_perfmgr_internal.h
drivers/misc/mediatek/performance/powerhal_cpu_ctrl/: powerhal_cpu_ctrl.c
drivers/misc/mediatek/power_throttling/: mtk_low_battery_throttling.c
drivers/misc/mediatek/spi_slave_drv/: spi_slave.c
drivers/misc/mediatek/swpm/inc/: swpm_module.h
drivers/misc/mediatek/swpm_legacy/: mtk_swpm.c
drivers/misc/mediatek/thermal/: mtk_thermal_monitor.c
drivers/misc/mediatek/thermal/common/coolers/: mtk_cooler_bcct.c  mtk_cooler_bcct_2nd.c  mtk_cooler_bcct_v1.c  mtk_cooler_bcct_v1_414.c  mtk_cooler_bcct_v2.c
drivers/misc/mediatek/thermal/inc/: tscpu_settings.h  tspmic_settings.h
drivers/misc/mediatek/thermal/v1/: mtk_thermal_monitor.c
drivers/misc/mediatek/thermal/v1/inc/: tscpu_settings.h  tspmic_settings.h
drivers/misc/mediatek/thermal/v2/: mtk_thermal_monitor.c
drivers/misc/mediatek/thermal/v2/inc/: tscpu_settings.h  tspmic_settings.h
drivers/misc/mediatek/thermal/v3/: mtk_thermal_monitor.c
drivers/misc/mediatek/thermal/v3/inc/: tscpu_settings.h  tspmic_settings.h
drivers/misc/mediatek/thermal/v4/: mtk_thermal_monitor.c
drivers/misc/mediatek/thermal/v4/inc/: tscpu_settings.h  tspmic_settings.h
drivers/misc/mediatek/thermal/v5/: mtk_thermal_monitor.c
drivers/misc/mediatek/thermal/v5/inc/: tscpu_settings.h
drivers/misc/mediatek/thermal/v6/: mtk_thermal_monitor.c
drivers/misc/mediatek/thermal/v7/: mtk_thermal_monitor.c
drivers/mm/: zsmalloc.c
drivers/net/ethernet/stmicro/stmmac/: stmmac_main.c
drivers/tee/tzdev/4/core/: tzdev.c
drivers/tee/tzdev/5/core/: tzdev.c
drivers/tee/tzdev/6/core/: tzdev.c
drivers/wt_security/: Kconfig
kernel/configs/: evanesia.config  los.config  mt6768_overlay.config
sound/soc/codecs/fs1815/: fsm-dev.h
sound/soc/codecs/fs18xx/: fsm-dev.h
(+8 files in other folders)
