package(
    default_visibility = [
        "//visibility:public",
    ],
)

exports_files([
    "profile/kernel.afdo",
])

load("//build/bazel_mgk_rules:mgk.bzl", "define_mgk")

mgk_kmi_symbol_list = "//kernel-6.6:android/abi_gki_aarch64_mtk"

filegroup(
        name = "mgk_configs",
        srcs = glob([
            "arch/arm64/configs/*",
            "kernel/configs/**",
            "**/Kconfig",
            "drivers/cpufreq/Kconfig.*",
        ]) + [
            "Kconfig.ext",
            # FIXME
            "Makefile.ext",
            "certs/mtk_signing_key.pem",
        ],
)
filegroup(
        name = "mgk_dt-bindings",
        srcs = glob([
            "include/dt-bindings/**",
            "include/dtc/**",
        ]),
)

genrule(
    name = "mtk_uapi_tarball",
    srcs = glob([
        "include/uapi/**/*.h",
        "vendor/mediatek/**/include/uapi/**/*.h",
    ]),
    outs = ["mtk-uapi-headers.tar.gz"],
    cmd = """
        STAGING_DIR=$(@D)/mtk_uapi_staging
        mkdir -p $$STAGING_DIR/usr/include
        for f in $(SRCS); do
            REL_PATH=$${f#*include/uapi/}
            mkdir -p $$STAGING_DIR/usr/include/$$(dirname $$REL_PATH)
            cp $$f $$STAGING_DIR/usr/include/$$REL_PATH
        done
        tar -czf $@ -C $$STAGING_DIR usr
    """,
    visibility = ["//visibility:public"],
)

# mgk_64_k66
load("//kernel_device_modules-6.6:kernel/kleaf/mgk_64.bzl",
     "mgk_64_defconfig",
     "mgk_64_kleaf_modules",
     "mgk_64_kleaf_eng_modules",
     "mgk_64_kleaf_userdebug_modules",
     "mgk_64_kleaf_user_modules",
     "mgk_64_common_modules",
     "mgk_64_common_eng_modules",
     "mgk_64_common_userdebug_modules",
     "mgk_64_common_user_modules",
     "mgk_64_device_modules",
     "mgk_64_platform_device_modules",
     "mgk_64_device_eng_modules",
     "mgk_64_platform_device_eng_modules",
     "mgk_64_device_userdebug_modules",
     "mgk_64_platform_device_userdebug_modules",
     "mgk_64_device_user_modules",
     "mgk_64_platform_device_user_modules"
)

define_mgk(
    name = "mgk_64_k66",
    defconfig = mgk_64_defconfig,
    kleaf_modules = mgk_64_kleaf_modules,
    kleaf_eng_modules = mgk_64_kleaf_eng_modules,
    kleaf_userdebug_modules = mgk_64_kleaf_userdebug_modules,
    kleaf_user_modules = mgk_64_kleaf_user_modules,
    common_modules = mgk_64_common_modules,
    common_eng_modules = mgk_64_common_eng_modules,
    common_userdebug_modules = mgk_64_common_userdebug_modules,
    common_user_modules = mgk_64_common_user_modules,
    device_modules = mgk_64_device_modules,
    platform_device_modules = mgk_64_platform_device_modules,
    device_eng_modules = mgk_64_device_eng_modules,
    platform_device_eng_modules = mgk_64_platform_device_eng_modules,
    device_userdebug_modules = mgk_64_device_userdebug_modules,
    platform_device_userdebug_modules = mgk_64_platform_device_userdebug_modules,
    device_user_modules = mgk_64_device_user_modules,
    platform_device_user_modules = mgk_64_platform_device_user_modules,
    symbol_list = mgk_kmi_symbol_list,
)
